Refactor core, clean code and refactor styles

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -1,9 +1,3 @@
 <Alloy>
-    <Window id="HomeWindow">
-        <TitleControl platform="ios">
-            <View id="titleView">
-                <Label id="titleLabel"/>
-            </View>
-        </TitleControl>
-    </Window>
+    <Window id="HomeWindow"/>
 </Alloy>
