--- a/app/views/login.xml
+++ b/app/views/login.xml
@@ -1,16 +1,16 @@
 <Alloy>
     <Window id="LoginWindow">
         <ScrollView id="scrollView">
-          <View id="fields">
+          <View class="fields">
             <View class="field">
-              <Label class="fieldIcon" id="emailIcon"/>
-              <TextField class="fieldText" id="email"/>
+                <Label class="fieldIcon" id="emailIcon"/>
+                <TextField class="fieldText" id="email"/>
             </View>
             <View class="field">
-              <Label class="fieldIcon" id="passIcon"/>
-              <TextField class="fieldText" id="pass"/>
+                <Label class="fieldIcon" id="passIcon"/>
+                <TextField class="fieldText" id="pass"/>
             </View>
-            <Button id="send"/>
+            <Button class="button" id="send"/>
           </View>
         </ScrollView>
     </Window>
