Search by internal guide in orders listview

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -20,6 +20,7 @@
                     </View>
                 </ItemTemplate>
             </Templates>
+            <SearchBar id="listSearch" platform="android"/>
             <ListSection id="listSection"/>
         </ListView>
     </Window>
