Show order serial number in ListView

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -10,6 +10,9 @@
                 <ItemTemplate name="default">
                     <View id="order">
                         <View id="left">
+                            <Label id="order_serial" bindId="order_serial"/>
+                        </View>
+                        <View id="middle">
                             <Label id="order_internal_guide" bindId="order_internal_guide"/>
                             <Label id="order_destinatary" bindId="order_destinatary"/>
                             <Label id="order_address" bindId="order_address"/>
